--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="storage_permission_rationale">We need storage permissions to upload pictures</string>
+    <string name="pictures_no_access">Couldn\'t access pictures</string>
+    <string name="pictures_choose">Choose a picture to upload</string>
+    <string name="dropbox_log_in">Log in to Dropbox to upload pictures</string>
 </resources>
