--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="upload_failed">Failed to upload file.</string>
     <string name="log_in">Log in</string>
     <string name="log_out">Log out</string>
+    <string name="title_activity_uploaded_files">Uploaded Files</string>
 </resources>
