--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="storage_permission_rationale">We need storage permissions to upload pictures</string>
+    <string name="storage_permission_rationale">Storage permissions are needed to upload pictures</string>
     <string name="pictures_no_access">Couldn\'t access pictures</string>
     <string name="pictures_choose">Choose a picture to upload</string>
     <string name="dropbox_log_in">Log in to Dropbox to upload pictures</string>
@@ -17,4 +17,7 @@
     <string name="log_out">Log out</string>
     <string name="title_activity_uploaded_files">Uploaded Files</string>
     <string name="menu_uploaded">Uploaded</string>
+    <string name="log_out_success">Successfully logged out</string>
+    <string name="upload_success">Upload successful</string>
+    <string name="user_account_error">Couldn\'t get user account</string>
 </resources>
