--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="storage_permission_rationale">Storage permissions are needed to upload pictures</string>
+    <string name="storage_permission_rationale">Allow storage access to upload pictures</string>
     <string name="pictures_no_access">Couldn\'t access pictures</string>
     <string name="pictures_choose">Choose a picture to upload</string>
     <string name="dropbox_log_in">Log in to Dropbox to upload pictures</string>
